some more changes to the index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <h1>Dummy Page for Git Demo</h1>
-  
+  <p>Put some text here so I have some changes to push</p>
 </body>
 </html>
